# OSTrading

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  architecture.md  brief.md  context.md  docker-compose.yml  product.md  pyproject.toml  tech.md
.gsd/: DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STATE.md
.kilo/plans/: 1777208480689-misty-pixel.md
config/: agents.json  risk.yaml  strategy.yaml  watchlist.json
docker/: entrypoint.sh  trading.crontab
scripts/: healthcheck.py  run_trading.py
skills/data_agent/: SKILL.md  fetch.py  indicators.py
skills/execution_agent/: SKILL.md  orders.py
skills/reporting/: SKILL.md  report.py
skills/risk_agent/: SKILL.md  checks.py
skills/strategy_agent/: SKILL.md  evaluate.py  rules.py
tests/: test_data_agent.py  test_execution_agent.py  test_risk_agent.py  test_strategy_agent.py
